# project-template

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.devcontainer/: devcontainer.json
src/: databricks_connection.py
