[tool.poetry]
authors = [
  "ACNE Data <contact@acne.se>",
]
description = ""
name = "project template"
version = "0.0.1"

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.group.dev.dependencies]
notebook = "^6.4.10"
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
databricks-cli = "^0.17.3"

[build-system]
build-backend = "poetry.core.masonry.api"
